# Axum-htmx-and-minijinja

./: Cargo.toml  package-lock.json  package.json  tailwind.config.js
assets/: output.css
migrations/: 20231122125722_create_todo_table.up.sql
src/: .main.rs.swp  main.rs  todo.rs
templates/: .index.html.swp  form.html  home-body.html  htmx-resp.html  index.html  test.html  todo.html
