[package]
name = "axum-tut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-template = { version = "1.0.0", features = ["minijinja"] }
minijinja = { version = "1.0.10", features = ["loader"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid", "macros" ] }

[dependencies.uuid]
version = "1.6.1"
features = [
    "v7",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
	"serde"
]


